fixed contrast issue

--- a/chamber/css/small.css
+++ b/chamber/css/small.css
@@ -103,7 +103,7 @@ header {
 
 /* Twitter */
 .fa-twitter {
-  background: #55ACEE;
+  background: #0E558B;
   color: white;
 }
 
